# bindfs

./: configure.ac  encrypt.sh
src/: Makefile.am  bindfs.c  crypticfs  crypticfs.c  permchain.c
